force-app/main/default/objects/DocGen_DocuSign_Mapping__mdt/DocGen_DocuSign_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>DocGen DocuSign Mapping</label>
    <pluralLabel>DocGen DocuSign Mappings</pluralLabel>
</CustomObject>