force-app/main/default/objects/DocGen_DocuSign_Mapping__mdt/fields/Anchor_Tag__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Tag__c</fullName>
    <label>Anchor Tag</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>