force-app/main/default/objects/DocGen_DocuSign_Mapping__mdt/fields/Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Type__c</fullName>
    <label>Anchor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SignHere</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>