force-app/main/default/objects/DocGen_DocuSign_Mapping__mdt/fields/Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>Merge_Field__c</fullName>
    <label>Merge Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>