force-app/main/default/objects/DocGen_DocuSign_Mapping__mdt/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <externalId>true</externalId>
    <label>Template Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>