force-app/main/default/objects/DocGen_DocuSign_Mapping__mdt/fields/Unique_Suffix_Field__c.field-meta.xml
<CustomField>
    <fullName>Unique_Suffix_Field__c</fullName>
    <label>Unique Suffix Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>